# Knowledge-Based-Conversational-AI-Agent-Platform

./: README.md  pyproject.toml
backend/: requirements.txt
backend/agent/: models.py  urls.py  views.py
backend/agent/migrations/: 0004_semanticcacheentry.py
backend/agent/services/: agent_service.py
backend/api/: urls.py  views.py
backend/chat/: models.py  views.py
backend/chat/migrations/: 0002_chatmessage_retrieved_chunk_ids_and_more.py
backend/config/: celery.py  settings.py
backend/core/: apps.py
backend/documents/: models.py  tasks.py  views.py
backend/documents/migrations/: 0005_document_meta_data.py  0006_remove_documentchunk_documents_d_documen_083a67_idx_and_more.py  0007_remove_documentchunk_document_embedding_idx_and_more.py
backend/rag/: pipepline.py
backend/rag/llm/: base.py
backend/rag/processors/: chunker.py  embeddings.py  meta.py  query_rewriter.py  retriever.py  semantic_cache.py
backend/users/migrations/: 0003_alter_user_email.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/api/: axios.js
frontend/src/components/layout/: Sidebar.jsx
frontend/src/pages/: Agents.jsx  ChatPage.jsx  CreateAgent.jsx  Documents.jsx  ForgotPassword.jsx  Invite.jsx  Login.jsx  Metrics.jsx  OrgEntry.jsx  UserProfile.jsx
frontend/src/services/auth/: AuthProvider.jsx
